--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fixed HTML Page</title>
+    <title>Blue Background - Black Text</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is an HTML tutorial">
     <style>
         body {
             background-color: blue;
-            color: white;
+            color: black;
             font-family: Arial, sans-serif;
             padding: 20px;
         }
         table, th, td {
-            border: 1px solid white;
+            border: 1px solid black;
             border-collapse: collapse;
             padding: 8px;
         }
         a {
-            color: yellow;
+            color: black;
         }
     </style>
 </head>
@@ -52,6 +52,7 @@
     <a href="https://www.google.com">गुगलमा जानुहोस्</a>
 
     <h3>मल्टिमिडिया समर्थन (Multimedia Support)</h3>
+    <p>उदाहरण छवि</p>
     <img src="example.jpg" alt="उदाहरण छवि" width="200">
 
     <h3>फारम र इनपुट (Forms and Input)</h3>
